# json5

./: .gitignore  .gitmodules  LICENSE  Makefile.am  NOTICES.md  README.md  common.m4  config.h.in  configure.ac  json5.c  json5.h
_xcode/: .gitignore
_xcode/json5/: main.c
_xcode/json5.xcodeproj/: project.pbxproj
_xcode/json5.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
_xcode/json5.xcodeproj/project.xcworkspace/xcshareddata/: json5.xcscmblueprint
_xcode/json5.xcodeproj/project.xcworkspace/xcuserdata/simon.xcuserdatad/: UserInterfaceState.xcuserstate
_xcode/json5.xcodeproj/xcshareddata/xcschemes/: json5.xcscheme
_xcode/json5.xcodeproj/xcuserdata/simon.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
_xcode/json5/json5/: main.c
_xcode/json5/json5.xcodeproj/: project.pbxproj
_xcode/json5/json5.xcodeproj/project.xcworkspace/xcshareddata/: json5.xcscmblueprint
_xcode/json5/json5.xcodeproj/project.xcworkspace/xcuserdata/simon.xcuserdatad/: UserInterfaceState.xcuserstate
_xcode/json5/json5.xcodeproj/xcuserdata/simon.xcuserdatad/xcschemes/: xcschememanagement.plist
dev/xcode/json5/: main.c
dev/xcode/json5.xcodeproj/: project.pbxproj
dev/xcode/json5.xcodeproj/project.xcworkspace/xcshareddata/: json5.xcscmblueprint
dev/xcode/json5.xcodeproj/xcshareddata/xcschemes/: json5.xcscheme
modules/php/: .gitignore  config.m4  json5.c
src/: Makefile.am  _json5.l.txt  json5-coder.c  json5-coder.h  json5-parser.c  json5-parser.h  json5-tokenizer.c  json5-tokenizer.h  json5-types.h  json5-value.c  json5-value.h  json5-writer.c  json5-writer.h  json5.c  json5.h
test/: Makefile.am  test-value-array  test-value-array.c  test-value-object  test-value-object.c  test-value-scalar  test-value-scalar.c  test.h  test_fail.c  test_json5.c
